// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`flyout/presenters/PanelContainerPresenter renders with all props 1`] = `
.emotion-1 {
  background-color: #ffffff;
  border-radius: 4px;
  border: 1px solid transparent;
  box-shadow: 0 0 16px rgba(0,0,0,0.25);
}

.emotion-0 {
  position: relative;
}

<div
  className="emotion-1"
  style={
    Object {
      "maxHeight": "150px",
    }
  }
>
  <div
    className="emotion-0"
  >
    Hello World
  </div>
</div>
`;

exports[`flyout/presenters/PanelContainerPresenter renders with only \`innerRef\` 1`] = `
.emotion-1 {
  background-color: #ffffff;
  border-radius: 4px;
  border: 1px solid transparent;
  box-shadow: 0 0 16px rgba(0,0,0,0.25);
}

.emotion-0 {
  position: relative;
}

<div
  className="emotion-1"
  style={
    Object {
      "maxHeight": undefined,
    }
  }
>
  <div
    className="emotion-0"
  />
</div>
`;
